@@ -5,6 +5,7 @@
 	bugfix: jQuery.UI static files were not accessible (by Aleksandr Balezin)
 	bugfix: 404 response header for missing static files was incorrect (by Aleksandr Balezin)
 	bugfix: SLB IP assignments were stored even if a balancer object was deleted
+	bugfix: exception when searching for a alien IP address
 	update: support of Huawei CE5800 series switch
 	update: port type could now be changed even if port is linked
 	update: mgmt link on FQDN (telnet, ssh, rdp) now supports any protocol (MGMT_PROTOS config var)
